Fix layout issue with Safari

--- a/docroot/sites/all/themes/custom/boston/src/sass/layouts/_layout.scss
+++ b/docroot/sites/all/themes/custom/boston/src/sass/layouts/_layout.scss
@@ -36,7 +36,7 @@ $default-gutter: 1.5em;
 // 2 column
 // Fill 50% of the width of the parent element.
 @mixin two-col($gutter: $default-gutter) {
-  width: calc(50% - (#{$gutter} / 1.925));
+  width: calc(50% - (#{$gutter} / 1.91));
   float: left;
   margin-left: 0;
   margin-right: 0;
